FINERACT-2442: Enforce role-based approval workflow and derive stage from authenticated staff