@@ -20,9 +20,7 @@ package org.apache.fineract.los.security;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.apache.fineract.los.infrastructure.fineract.FineractAuthResponse;
 import org.apache.fineract.los.service.FineractCredentialValidationService;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.BadCredentialsException;
@@ -32,41 +30,60 @@ import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
+/**
+ * Authenticates LOS staff (loan officers, branch managers, credit committee members) by delegating
+ * credential validation to Apache Fineract's {@code POST /authentication} endpoint via {@link
+ * FineractCredentialValidationService}, then resolving the caller's LOS workflow role from the
+ * Fineract roles present in that response.
+ *
+ * <p>Every successfully authenticated staff member is granted {@code ROLE_STAFF}. If their Fineract
+ * roles map to a configured LOS workflow role (see {@link FineractRoleResolver}), an additional
+ * {@code ROLE_<LosRole>} authority (e.g. {@code ROLE_LOAN_OFFICER}) is granted. {@code
+ * ApprovalWorkflowService} relies on that second authority to enforce that only the officer whose
+ * role matches the application's current workflow stage can record a decision on it.
+ */
 @Component
 @RequiredArgsConstructor
 public class FineractAuthenticationProvider implements AuthenticationProvider {
 
+  private static final String ROLE_STAFF = "ROLE_STAFF";
+  private static final String ROLE_PREFIX = "ROLE_";
+
   private final FineractCredentialValidationService validationService;
+  private final FineractRoleResolver roleResolver;
 
   @Override
-  public Authentication authenticate(Authentication authentication) throws AuthenticationException {
+  public Authentication authenticate(final Authentication authentication)
+      throws AuthenticationException {
 
-    String username = authentication.getName();
-    String password = authentication.getCredentials().toString();
+    final String username = authentication.getName();
+    final String password = authentication.getCredentials().toString();
 
-    FineractAuthResponse fineractResponse = validationService.validate(username, password);
+    final FineractAuthResponse fineractResponse = validationService.validate(username, password);
 
     if (fineractResponse == null) {
       throw new BadCredentialsException("Invalid Fineract credentials for user: " + username);
     }
 
-    List<SimpleGrantedAuthority> authorities =
-        fineractResponse.getPermissions() == null
-            ? List.of(new SimpleGrantedAuthority("ROLE_STAFF"))
-            : fineractResponse.getPermissions().stream()
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+    final List<String> fineractRoleNames =
+        fineractResponse.getRoles() == null
+            ? List.of()
+            : fineractResponse.getRoles().stream()
+                .map(FineractAuthResponse.FineractRole::getName)
+                .toList();
 
-    if (authorities.stream().noneMatch(a -> a.getAuthority().equals("ROLE_STAFF"))) {
-      authorities = new ArrayList<>(authorities);
-      authorities.add(new SimpleGrantedAuthority("ROLE_STAFF"));
-    }
+    final List<SimpleGrantedAuthority> authorities = new ArrayList<>();
+    authorities.add(new SimpleGrantedAuthority(ROLE_STAFF));
+
+    roleResolver
+        .resolve(fineractRoleNames)
+        .ifPresent(role -> authorities.add(new SimpleGrantedAuthority(ROLE_PREFIX + role.name())));
 
     return new UsernamePasswordAuthenticationToken(username, password, authorities);
   }
 
   @Override
-  public boolean supports(Class<?> authentication) {
+  public boolean supports(final Class<?> authentication) {
     return UsernamePasswordAuthenticationToken.class.isAssignableFrom(authentication);
   }
 }
